--- a/Qwen_2.5/qwen_law_assistant/adapter_config.json
+++ b/Qwen_2.5/qwen_law_assistant/adapter_config.json
@@ -25,13 +25,13 @@
   "rank_pattern": {},
   "revision": null,
   "target_modules": [
-    "o_proj",
-    "gate_proj",
     "q_proj",
-    "v_proj",
-    "up_proj",
+    "k_proj",
     "down_proj",
-    "k_proj"
+    "gate_proj",
+    "v_proj",
+    "o_proj",
+    "up_proj"
   ],
   "target_parameters": null,
   "task_type": "CAUSAL_LM",
